.archive/clusters/homelab-1/.network-policies/allow-ingress-from-internal/source/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-internal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx-internal-app
      app.kubernetes.io/name: ingress-nginx
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              networking/allow-ingress-to-internal-nginx: "true"
